baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasMap_render_prompt@OutputTypeAliasMap.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasMap.baml
---
fixture: OutputTypeAliasMap.baml
function: FnOutputTypeAliasMap
prompt:
  type: Completion
  text: "Return the given Graph back:\n\n\n\nAnswer in JSON using this schema:\nGraph"
