baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasMergeAttrs_render_prompt@OutputTypeAliasMergeAttrs.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasMergeAttrs.baml
---
fixture: OutputTypeAliasMergeAttrs.baml
function: FnOutputTypeAliasMergeAttrs
prompt:
  type: Completion
  text: "Return the given integer in the specified format:\n\n\n\nAnswer in JSON using this schema:\n{\n  amount: Amount,\n}"
