baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasMultipleAttrs_render_prompt@OutputTypeAliasMultipleAttrs.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasMultipleAttrs.baml
---
fixture: OutputTypeAliasMultipleAttrs.baml
function: FnOutputTypeAliasMultipleAttrs
prompt:
  type: Completion
  text: "Return the given integer without additional context:\n\n\n\nAnswer as an int"
