baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasNested_render_prompt@OutputTypeAliasNested.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasNested.baml
---
fixture: OutputTypeAliasNested.baml
function: FnOutputTypeAliasNested
prompt:
  type: Completion
  text: "Return the given value back:\n\n\n\nCombination"
