baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasPrimitive_render_prompt@OutputTypeAliasPrimitive.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasPrimitive.baml
---
fixture: OutputTypeAliasPrimitive.baml
function: FnOutputTypeAliasPrimitive
prompt:
  type: Completion
  text: "Return the given value back: \n\nAnswer in JSON using this schema:\nPrimitive"
