baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasRecursiveCycle_render_prompt@OutputTypeAliasRecursiveCycle.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasRecursiveCycle.baml
---
fixture: OutputTypeAliasRecursiveCycle.baml
function: FnOutputTypeAliasRecursiveCycle
prompt:
  type: Completion
  text: "Return the given JSON array:\n\n\n\nRecAliasOne"
