baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasRecursiveList_render_prompt@OutputTypeAliasRecursiveList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasRecursiveList.baml
---
fixture: OutputTypeAliasRecursiveList.baml
function: FnOutputTypeAliasRecursiveList
prompt:
  type: Completion
  text: "Return the given JSON array:\n\n\n\nRecursiveListAlias"
