baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasRecursiveMap_render_prompt@OutputTypeAliasRecursiveMap.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasRecursiveMap.baml
---
fixture: OutputTypeAliasRecursiveMap.baml
function: FnOutputTypeAliasRecursiveMap
prompt:
  type: Completion
  text: "Return the given value:\n\n\n\nRecursiveMapAlias"
