baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliasReturnMerged_render_prompt@OutputTypeAliasReturnMerged.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliasReturnMerged.baml
---
fixture: OutputTypeAliasReturnMerged.baml
function: FnOutputTypeAliasReturnMerged
prompt:
  type: Completion
  text: "Return the given integer without additional context:\n\n\n\nAnswer as an int"
