baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputTypeAliases_render_prompt@OutputTypeAliases.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputTypeAliases.baml
---
fixture = 'OutputTypeAliases.baml'
function = 'FnOutputTypeAliases'

[prompt]
type = 'Completion'
text = '''
Return the given value back: 

Primitive'''
