baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputUnions_render_prompt@OutputUnions.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputUnions.baml
---
fixture = 'OutputUnions.baml'
function = 'FnOutputUnions'

[prompt]
type = 'Completion'
text = '''
Return a JSON blob with this schema:
{
  prop2: (float | bool)[]
  prop1: string or bool
  prop3: (bool[] | int[])
}

JSON:'''
