baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__PromptsNoChatMessages_render_prompt@PromptsNoChatMessages.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/PromptsNoChatMessages.baml
---
fixture = 'PromptsNoChatMessages.baml'
function = 'FnPromptsNoChatMessages'

[prompt]
type = 'Completion'
text = 'Tell me a short story about .'
